# WSP

./: package-lock.json  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/api/projects/: route.ts
app/project/[projectId]/: layout.tsx  page.tsx
components/layout/: wizard-stepper.tsx
components/map/: dynamic-map.tsx  project-map.tsx
components/project/: agent-status-tracker.tsx
components/shared/: confidence-indicator.tsx  reasoning-trace.tsx  source-preview-modal.tsx  status-badge.tsx
lib/: types.ts
lib/services/: api-client.ts
lib/stores/: project-store.ts
scripts/backend/: __init__.py  main.py  pyproject.toml
scripts/backend/executors/: __init__.py  consistency_validation.py  context_analysis.py  historical_comparison.py  impact_analysis.py  legal_threshold.py  mitigation.py  project_structuring.py  report_generation.py  screening_decision.py
scripts/backend/libraries/: historical_reports.json  impact_factors.json  legal_thresholds.json  mitigation_measures.json  project_types.json  vecs.json
scripts/backend/models/: __init__.py  consistency.py  context.py  historical.py  impact.py  mitigation.py  project.py  report.py  state.py  threshold.py
scripts/backend/orchestrator/: __init__.py  state_manager.py  workflow_builder.py
scripts/backend/routes/: __init__.py  projects.py  screening.py
scripts/backend/tools/: __init__.py  document_extraction.py  geospatial.py  historical_rag.py  impact_factors_library.py  legal_library.py  mitigation_library.py  project_library.py  vecs_library.py
(+20 files in other folders)
