[project]
name = "eia-screening-platform"
version = "1.0.0"
description = "Enterprise-grade EIA Screening Platform powered by Microsoft Agent Framework"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
